# Practica0LeoAlvarado

./: CMakeLists.txt  Imagen.cpp  Imagen.h  PDF.cpp  PDF.h  ScriptPDF.py  archivo.txt  main  main.cpp
